<resources>
    <string name="app_name">Estimewa</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="riwayat_belanja">Riwayat Belanja</string>
    <string name="bahan">Ingredient</string>
    <string name="resep">Recipe</string>
    <string name="belanja">Shopping</string>
    <string name="floating_action_button">Floating action button to add</string>
    <string name="activity_title_edit">Edit Ingredient</string>
    <string name="save">Save</string>
    <string name="text_ingredient_name">Ingredient Name</string>
    <string name="text_ingredient_price">Price</string>
    <string name="text_ingredient_unit">Unit</string>
    <string name="detail_resep">Detail Resep</string>
    <string name="ingredient_detail">Ingredient Detail</string>
    <string name="detail_belanja">Shop Detail</string>
    <string name="text_unit_init_pcs">pcs</string>
    <string name="text_unit_init_amount">1</string>
    <string name="text_ingredient_amount">Amount</string>
    <string name="title_activity_edit_recipe">EditRecipeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="save_ingredient">Save Ingredient</string>
    <string name="recipe_image_backdrop">Recipe image backdrop</string>
    <string name="text_edit_recipe">Edit Recipe</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="text_label_amount">Amount</string>
    <string name="text_label_ingredient">Ingredients</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="price">Price</string>
    <string name="unit">Unit</string>
    <string name="seller">Seller</string>
    <string name="edit">Edit</string>
</resources>